# prexSim

./: .gitignore  CMakeLists.txt  anaHallRadiation.cc  anaRadDosage.cc  copyDosage.cc  fixFloats.patch
geometry/: #prexCrexLeadTargetCarynCREX.gdml#  #prexCrexLeadTargetCarynCREX_ciprianShielding.gdml#  .#prexCrexLeadTargetCarynCREX.gdml  crex5deg_thermalTests.gdml  kriptoniteDetectors.gdml  kriptoniteDetectors_ricky.gdml  oneWayTest.gdml  prexCrexCalcTarget.gdml  prexCrexLeadTarget.gdml  prexCrexLeadTargetCaryn.gdml  prexCrexLeadTargetCarynCREX.gdml  prexCrexLeadTargetCarynCREX_copy.gdml  prexCrexLeadTarget_March-2016.gdml  prexCrexLeadTarget_MarchCopy.gdml  prexCrexLeadTarget_working.gdml
macros/: myRun.mac  myRun2.mac  preRun.mac  prex_prerunCiprian.mac
radDamage/: CMakeLists.txt  calc1MeVneutronEquivalent.cc
rootScripts/: cdf1.C  cdf2.C  dosage_plots.C
src/: #MollerGlobalMagnetField_test.cc#  MollerGlobalMagnetField.cc
